tests/NormalTests/paczka1/fuzzy1/11367667.err
Error in line 8: S120 S566 0,0
Error in line 5: kTZ S472 99,9
Error in line 18: K5Lr A275 18,7
Error in line 30: a91QCw S472 -1,3
Error in line 29: mcoWmPOL S120 21,9
Error in line 23: szjMoJHHkz A275 61,3
